# GaussianGPT-Reproduction

./: .gitignore  AGENTS.md  README.md  pyproject.toml
GaussianGPT/: requirements.txt
GaussianGPT/configs/: autoencoder_ase.yaml  autoencoder_object.yaml  autoencoder_scene.yaml  transformer_object.yaml  transformer_scene.yaml
GaussianGPT/gaussiangpt/: __init__.py  data.py
GaussianGPT/gaussiangpt/autoencoder/: __init__.py  diagnostics.py  gaussian_heads.py  model.py  quantizer.py  sparse_cnn.py
GaussianGPT/gaussiangpt/transformer/: __init__.py  gpt.py  rope3d.py
GaussianGPT/gaussiangpt/utils/: __init__.py  losses.py  perceptual.py  renderer.py  rendering.py  serialization.py
GaussianGPT/scripts/: debug_ase_autoencoder_batch.py  generate.py  train_autoencoder.py  train_transformer.py
GaussianGPT/utils/: clean.py  measure_size.py
ae/: .gitignore
configs/: ae_base.yaml
scripts/: build_ase_voxel_cache.py  debug_ase_dataloader.py  debug_ase_sampler_camera.py  debug_render_sampled_chunk_gt.py  debug_sample_ase_chunk.py  inspect_ase.py  inspect_ase_data.py
src/gaussiangpt_ae/: __init__.py  spec.py
src/gaussiangpt_ae.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gaussiangpt_ae/data/: __init__.py  ase.py  ase_camera.py  ase_dataset.py  ase_online_sampler.py  ase_scene.py  (+12 more)
tests/: test_ase_camera.py  test_ase_dataset.py  test_ase_online_sampler.py  test_ase_reader.py  test_ase_scene.py  test_ase_stats.py  test_ase_voxel_cache.py  test_camera_scoring.py  test_me_voxelize.py  test_npz_io.py  test_ply_io.py  test_scaffold.py  test_schema.py
